<?xml version="1.0" encoding="utf-8" ?>
<resources>
    <!-- Strings for LocationPermissionRequestActivity. -->
    <string name="action_settings">Settings</string>

    <string name="title_activity_location_permission_request">Location Permission Required</string>
    <string name="main_message_activity_location_permission_request">See distances to access points with Wifi RTT (permission required).</string>
    <string name="details_message_activity_location_permission_request">This app needs access to your phone\'s location to show the distances between this device and Wifi RTT enabled access points.</string>
    <string name="no_thanks_activity_location_permission_request">No Thanks</string>
    <string name="continue_activity_location_permission_request">Continue</string>

    <string name="recycler_row_header_label_ssid">SSID</string>
    <string name="recycler_row_header_label_bssid">BSSID</string>
    <string name="retrieving_access_points">Retrieving Access Points&#8230;</string>
    <string name="scan_wifi_button_label">Scan WiFi</string>
    <string name="introduction_text">Click the button below to scan access points.</string>

    <!-- Strings for AccessPointRangingResultsActivity. -->
    <string name="title_activity_access_point_ranging_results">Access Point Ranging Results</string>
    <string name="activity_access_point_ranging_results_requesting_default">Requesting&#8230;</string>
    <string name="range_label_activity_access_point_ranging_results">Range (m):</string>
    <string name="range_mean_label_activity_access_point_ranging_results">Range-mean (m):</string>
    <string name="range_sd_label_activity_access_point_ranging_results">RangeSD (m):</string>
    <string name="range_sd_mean_activity_access_point_ranging_results">RangeSD-mean (m):</string>
    <string name="rssi_label_activity_access_point_ranging_results">RSSI (dBm):</string>
    <string name="successes_in_burst_label_activity_access_point_ranging_results">Successes in burst:</string>
    <string name="success_ratio_label_activity_access_point_ranging_results">Success Ratio:</string>

    <string name="stats_window_size_label_activity_access_point_ranging_results">Stats window size:</string>
    <string name="ranging_period_label_activity_access_point_ranging_results">Ranging period (ms):</string>

    <string name="reset_label_activity_access_point_ranging_results">Reset Ranging Requests</string>
    <string name="number_of_requests_label_activity_access_point_ranging_results">Number of requests:</string>
    <string name="get_responder_location_label_activity_access_point_ranging_results">Get responder location</string>
    <string name="mac_mismatch_message_activity_access_point_ranging_results">Callback MAC address doesn\'t match original request MAC address.</string>

    <!-- Strings for TestActivity. -->
    <string name="title_activity_test">Test Activity</string>
    <string name="user_lat_lng">User LatLng:</string>
    <string name="num_updates">Updates:</string>

    <!-- Strings for Client Interface Home Activity. -->
    <string name="home_screen">Home Screen</string>
    <string name="change_food_centre">change</string>
    <string name="change_food_centre_cd">change food centre</string>
    <string name="home_greeting">You are at</string>
    <string name="home_venue">Timbre+</string>
    <string name="home_venue_cd">Timbre+ Food Centre</string>
    <string name="searchbar_hint">Search for dishes, stall or cuisine</string>
    <string name="home_recycler_view_title">Top Picks</string>
    <string name="home_recycler_view_title_cd">Showing Top 5 Picks</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_stars_text">4.8 \u2605</string>
    <string name="find_best_route">Calculating the fastest route for you...</string>
    <string name="directions_text">Directions to</string>
    <string name="navigation_exit_text"><u>Exit Navigation</u></string>
    <string name="refresh_text">Refresh Instructions</string>
>>>>>>> Navigation Start Screen add Refresh Button and mock instructions

    <string name="multiple">MULTIPLE</string>
    <string name="change_hawker">change hawker</string>
    <string name="title_activity_maps">Map</string>
    <string name="map_button">Map</string>
</resources>