<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ClientInterface.Activities.NavigationStart">

        <androidx.cardview.widget.CardView
            android:id="@+id/navigation_directions_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foregroundGravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:cardElevation="5sp"
            app:layout_constraintTop_toTopOf="parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:padding="20sp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:id="@+id/directions_text"
                android:text="@string/directions_text"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12sp"
            android:text="@string/find_best_route"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/navigation_directions_card" />

        <TextView
            android:id="@+id/navigation_exit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24sp"
            android:text="@string/navigation_exit_text"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:selectAllOnFocus="false"
            android:linksClickable="false"
            android:autoLink="all"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>